y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'

  20  $$5 :

  21  $$6 :

  22  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  23  $$7 :

  24  cmd : IF '(' exp $$7 ')' cmd restoIf

  25  $$8 :

  26  cmd : DO $$8 cmd WHILE '(' exp ')' ';'

  27  $$9 :

  28  $$10 :

  29  $$11 :

  30  cmd : FOR '(' exp ';' $$9 exp ';' $$10 exp ')' $$11 cmd

  31  $$12 :

  32  restoIf : ELSE $$12 cmd
  33          |

  34  exp : NUM
  35      | TRUE
  36      | FALSE
  37      | ID
  38      | '(' exp ')'
  39      | '!' exp
  40      | exp '+' exp
  41      | exp '-' exp
  42      | exp '*' exp
  43      | exp '/' exp
  44      | exp '%' exp
  45      | exp '>' exp
  46      | exp '<' exp
  47      | exp EQ exp
  48      | exp LEQ exp
  49      | exp GEQ exp
  50      | exp NEQ exp
  51      | exp OR exp
  52      | exp AND exp
  53      | ID '=' exp
  54      | ID MAISIGUAL exp
  55      | MAISMAIS ID
  56      | ID MAISMAIS
  57      | MENOSMENOS ID
  58      | ID MENOSMENOS
  59      | exp '?' exp ':' exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	DO  shift 25
	WHILE  shift 26
	TRUE  shift 27
	FALSE  shift 28
	FOR  shift 29
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	'}'  reduce 4

	$$3  goto 35
	cmd  goto 36
	exp  goto 37


state 20
	exp : ID .  (37)
	exp : ID . '=' exp  (53)
	exp : ID . MAISIGUAL exp  (54)
	exp : ID . MAISMAIS  (56)
	exp : ID . MENOSMENOS  (58)

	MAISMAIS  shift 38
	MENOSMENOS  shift 39
	MAISIGUAL  shift 40
	'='  shift 41
	EQ  reduce 37
	LEQ  reduce 37
	GEQ  reduce 37
	NEQ  reduce 37
	AND  reduce 37
	OR  reduce 37
	'?'  reduce 37
	':'  reduce 37
	'>'  reduce 37
	'<'  reduce 37
	'+'  reduce 37
	'-'  reduce 37
	'*'  reduce 37
	'/'  reduce 37
	'%'  reduce 37
	')'  reduce 37
	';'  reduce 37


state 21
	exp : NUM .  (34)

	.  reduce 34


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 42
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 43
	.  error


state 24
	cmd : IF . '(' exp $$7 ')' cmd restoIf  (24)

	'('  shift 44
	.  error


state 25
	cmd : DO . $$8 cmd WHILE '(' exp ')' ';'  (26)
	$$8 : .  (25)

	.  reduce 25

	$$8  goto 45


state 26
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (22)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 46


state 27
	exp : TRUE .  (35)

	.  reduce 35


state 28
	exp : FALSE .  (36)

	.  reduce 36


state 29
	cmd : FOR . '(' exp ';' $$9 exp ';' $$10 exp ')' $$11 cmd  (30)

	'('  shift 47
	.  error


state 30
	exp : MAISMAIS . ID  (55)

	ID  shift 48
	.  error


state 31
	exp : MENOSMENOS . ID  (57)

	ID  shift 49
	.  error


state 32
	exp : '!' . exp  (39)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 50


state 33
	exp : '(' . exp ')'  (38)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 51


state 34
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 52


state 35
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 53
	.  error


state 36
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 37
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (40)
	exp : exp . '-' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '/' exp  (43)
	exp : exp . '%' exp  (44)
	exp : exp . '>' exp  (45)
	exp : exp . '<' exp  (46)
	exp : exp . EQ exp  (47)
	exp : exp . LEQ exp  (48)
	exp : exp . GEQ exp  (49)
	exp : exp . NEQ exp  (50)
	exp : exp . OR exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '?' exp ':' exp  (59)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'?'  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	';'  shift 68
	.  error


state 38
	exp : ID MAISMAIS .  (56)

	.  reduce 56


state 39
	exp : ID MENOSMENOS .  (58)

	.  reduce 58


state 40
	exp : ID MAISIGUAL . exp  (54)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 69


state 41
	exp : ID '=' . exp  (53)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 70


state 42
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 71
	.  error


state 43
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 72
	.  error


state 44
	cmd : IF '(' . exp $$7 ')' cmd restoIf  (24)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 73


state 45
	cmd : DO $$8 . cmd WHILE '(' exp ')' ';'  (26)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	DO  shift 25
	WHILE  shift 26
	TRUE  shift 27
	FALSE  shift 28
	FOR  shift 29
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	.  error

	cmd  goto 74
	exp  goto 37


state 46
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (22)

	'('  shift 75
	.  error


state 47
	cmd : FOR '(' . exp ';' $$9 exp ';' $$10 exp ')' $$11 cmd  (30)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 76


state 48
	exp : MAISMAIS ID .  (55)

	.  reduce 55


state 49
	exp : MENOSMENOS ID .  (57)

	.  reduce 57


state 50
	exp : '!' exp .  (39)
	exp : exp . '+' exp  (40)
	exp : exp . '-' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '/' exp  (43)
	exp : exp . '%' exp  (44)
	exp : exp . '>' exp  (45)
	exp : exp . '<' exp  (46)
	exp : exp . EQ exp  (47)
	exp : exp . LEQ exp  (48)
	exp : exp . GEQ exp  (49)
	exp : exp . NEQ exp  (50)
	exp : exp . OR exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '?' exp ':' exp  (59)

	.  reduce 39


state 51
	exp : '(' exp . ')'  (38)
	exp : exp . '+' exp  (40)
	exp : exp . '-' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '/' exp  (43)
	exp : exp . '%' exp  (44)
	exp : exp . '>' exp  (45)
	exp : exp . '<' exp  (46)
	exp : exp . EQ exp  (47)
	exp : exp . LEQ exp  (48)
	exp : exp . GEQ exp  (49)
	exp : exp . NEQ exp  (50)
	exp : exp . OR exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '?' exp ':' exp  (59)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'?'  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	')'  shift 77
	.  error


state 52
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	DO  shift 25
	WHILE  shift 26
	TRUE  shift 27
	FALSE  shift 28
	FOR  shift 29
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	'}'  shift 78
	.  error

	cmd  goto 36
	exp  goto 37


state 53
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 54
	exp : exp EQ . exp  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 79


state 55
	exp : exp LEQ . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 80


state 56
	exp : exp GEQ . exp  (49)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 81


state 57
	exp : exp NEQ . exp  (50)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 82


state 58
	exp : exp AND . exp  (52)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 83


state 59
	exp : exp OR . exp  (51)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 84


state 60
	exp : exp '?' . exp ':' exp  (59)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 85


state 61
	exp : exp '>' . exp  (45)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 86


state 62
	exp : exp '<' . exp  (46)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 87


state 63
	exp : exp '+' . exp  (40)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 88


state 64
	exp : exp '-' . exp  (41)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 89


state 65
	exp : exp '*' . exp  (42)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 90


state 66
	exp : exp '/' . exp  (43)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 91


state 67
	exp : exp '%' . exp  (44)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 27
	FALSE  shift 28
	MAISMAIS  shift 30
	MENOSMENOS  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 92


state 68
	cmd : exp ';' .  (14)

	.  reduce 14


state 69
	exp : exp . '+' exp  (40)
	exp : exp . '-' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '/' exp  (43)
	exp : exp . '%' exp  (44)
	exp : exp . '>' exp  (45)
	exp : exp . '<' exp  (46)
	exp : exp . EQ exp  (47)
	exp : exp . LEQ exp  (48)
	exp : exp . GEQ exp  (49)
	exp : exp . NEQ exp  (50)
	exp : exp . OR exp  (51)
	exp : exp . AND exp  (52)
	exp : ID MAISIGUAL exp .  (54)
	exp : exp . '?' exp ':' exp  (59)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'?'  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	':'  reduce 54
	')'  reduce 54
	';'  reduce 54


state 70
	exp : exp . '+' exp  (40)
	exp : exp . '-' exp  (41)
	exp : exp . '*' exp  (42)
	exp : exp . '/' exp  (43)
	exp : exp . '%' exp  (44)
	exp : exp . '>' exp  (45)
	exp : exp . '<' exp  (46)
	exp : exp . EQ exp  (47)
	exp : exp . LEQ exp  (48)
	exp : exp . GEQ exp  (49)
	exp : exp . NEQ exp  (50)
	exp : exp . OR exp  (51)
	exp : exp . AND exp  (52)
	exp : ID '=' exp .  (53)
	exp : exp . '?' exp ':' exp  (59)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'?'  shift 60
	'>'  shift 61
	'<'  shift 62
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	':'  reduce 53
	')'  reduce 53
	';'  reduce 53


state 71
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 93
	.  error


state 72
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 94
	','  reduce 17

	$$4  goto 95

